[tool.poetry]
name = "dfastcommons"
version = "0.1.0"
description = "A support library for D-fast tools."
authors = ["Stichting Deltares <delft3d.support@deltares.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
numpy = "^1.24.1"
pandas = "^1.5.2"
geopandas = "^1.0.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^5.0"
mock = "^5.1.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.10.1"
flake8 = "^3.9.2"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
