[tool.poetry]
name = "dfastio"
version = "0.1.0"
description = "A support library for D-fast tools."
authors = ["Stichting Deltares <delft3d.support@deltares.nl>"]
readme = "README.md"
packages = [{ include = "dfastio", from= "src"}]

[tool.poetry.dependencies]
python = "^3.9.12"
numpy = ">=1.22.0"
pandas = ">=1.4.0"
geopandas = ">=0.14.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^5.0"
pyfakefs = "^5.1.0"
pre-commit = "^4.2.0"
commitizen = "^4.8.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.2"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
pymdown-extensions = "^10.12"
mkdocs-autorefs = "^1.2"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-jupyter = "^0.25.1"
mkdocs-mermaid2-plugin = "^1.2.1"
mike = "^2.1.3"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "<7.0"


[tool.coverage.report]
show_missing = true
fail_under = 61

[tool.flake8]
max-line-length = 100

[tool.black]
profile = "flake8"
line-length = 88
target-version = ['py39']
skip-string-normalization = true  # Avoid unnecessary quote changes

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
tag_format = "$version"
version_files = [
    "src/dfastio/__init__.py:__version__",
]
changelog_file = "docs/change-log.md"
update_changelog_on_bump = true
changelog_incremental = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
